--- a/css/styles.css
+++ b/css/styles.css
@@ -100,6 +100,9 @@ ul li a:hover {
 .open-nav {
     display: grid;
 }
+.open-nav a {
+    font-size: 1.4em;
+}
 span {
     color: #ffd369;
     font-style: italic;
