--- a/css/style.production.css
+++ b/css/style.production.css
@@ -484,6 +484,10 @@ a#web:hover {
   padding: 0;
 }
 
+.cs__item h4 {
+  font-size: 0.6em;
+}
+
 #cs {
   color: #a6a6a6 !important;
   position: absolute;
@@ -749,6 +753,10 @@ h6 {
   } */
   .contact__item {
     width: 70%;
+  }
+
+  .cs__item h4 {
+    font-size: 1em;
   }
 }
 @media all and (min-width: 900px) {
