--- a/css/styles.css
+++ b/css/styles.css
@@ -128,6 +128,7 @@ span {
     place-content: center;
     width: 60%;
     margin: 0 auto;
+    clip-path: polygon(0 100%, 100% 100%, 100% 100%, 0% 100%); 
     /* padding: 0 2em; */
 }
 .profile-content h1 {
@@ -150,6 +151,7 @@ span {
     display: flex;
     justify-content: space-evenly;
     margin-bottom: 2em;
+    clip-path: polygon(0 100%, 100% 100%, 100% 100%, 0% 100%); 
 }
 #btn-work {
     /* display: block; */
@@ -200,7 +202,7 @@ span {
     justify-content: center;
     width: 90%;
     margin: 0 auto;
-    font-size: 1.4em;
+    font-size: 1.2em;
 }
 
 .iam h1 {
@@ -297,7 +299,7 @@ span {
 .projects p {
     display: block;
     justify-content: center;
-    margin: 0 auto 1em;
+    margin: 0 auto 2em;
     font-size: 1.2em;
     color: #a6a6a6;
     width: 85%;
@@ -400,14 +402,25 @@ a#web:hover {
     top: 20px;
     left: 20px;
 }
-  
-#site {
+
+#doc {
     color: #ff5757 !important;
+    position: absolute;
+    top: 20px;
+    right: 100px;
+}
+#site {
+    color: black;
+    background: #ff5757;
     position: absolute;
     top: 20px;
     right: 20px;
 }
-
+#site:hover {
+    background-color: black;
+    color: #ff5757;
+    border: 1px solid #ff5757;
+}
 .meet {
     background-image: url('../img/meet.png');
     background-size: cover;
