--- a/css/style.production.css
+++ b/css/style.production.css
@@ -246,7 +246,8 @@ span {
 .iam h1 {
   display: block;
   text-align: center;
-  margin-bottom: 0.5em;
+  margin-top: 2em;
+  margin-bottom: .5em;
 }
 
 .resume {
