--- a/css/style.production.css
+++ b/css/style.production.css
@@ -16,7 +16,7 @@ body {
 
 * {
   -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 /* header {
@@ -31,8 +31,8 @@ header {
   display: flex;
   /* padding: 1em; */
   -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
   background: #393939;
   /* align-items: center; */
   z-index: 99;
@@ -140,14 +140,14 @@ span {
 .profile-content {
   display: block;
   -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
   text-align: center;
   place-content: center;
   width: 60%;
   margin: 0 auto;
   -webkit-clip-path: polygon(0 100%, 100% 100%, 100% 100%, 0% 100%);
-          clip-path: polygon(0 100%, 100% 100%, 100% 100%, 0% 100%);
+  clip-path: polygon(0 100%, 100% 100%, 100% 100%, 0% 100%);
   /* padding: 0 2em; */
 }
 
@@ -174,11 +174,11 @@ span {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: space-evenly;
-      -ms-flex-pack: space-evenly;
-          justify-content: space-evenly;
+  -ms-flex-pack: space-evenly;
+  justify-content: space-evenly;
   margin-bottom: 2em;
   -webkit-clip-path: polygon(0 100%, 100% 100%, 100% 100%, 0% 100%);
-          clip-path: polygon(0 100%, 100% 100%, 100% 100%, 0% 100%);
+  clip-path: polygon(0 100%, 100% 100%, 100% 100%, 0% 100%);
 }
 
 #btn-work {
@@ -194,7 +194,7 @@ span {
 
 #btn-contact {
   /* display: block; */
-  padding: 0.4em 0.5em;
+  padding: 0.5em 0.5em;
   color: #393939;
   background: #ffd369;
   cursor: pointer;
@@ -210,17 +210,17 @@ span {
 #btn-work:hover {
   opacity: 0.9;
   -webkit-box-shadow: 10px 10px 10px 0px rgba(206, 204, 204, 0.06);
-          box-shadow: 10px 10px 10px 0px rgba(206, 204, 204, 0.06);
+  box-shadow: 10px 10px 10px 0px rgba(206, 204, 204, 0.06);
 }
 
 #about {
   display: -ms-grid;
   display: grid;
   -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
   place-content: center;
-  height: 700px;
+  /* height: 700px; */
   position: relative;
   /* padding: 1em; */
 }
@@ -236,8 +236,8 @@ span {
   display: grid;
   place-content: center;
   -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
   width: 90%;
   margin: 0 auto;
   font-size: 1.2em;
@@ -247,28 +247,29 @@ span {
   display: block;
   text-align: center;
   margin-top: 2em;
-  margin-bottom: .5em;
+  margin-bottom: 0.5em;
 }
 
 .resume {
   display: block;
   width: 250px;
-  padding: 0.2em 0.3em;
+  padding: 0.5em 0.6em;
   background: #393939;
   color: #ffd369;
   cursor: pointer;
-  margin: 2em auto auto;
+  margin: 1em auto;
   -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
   text-align: center;
   border: 1px #393939 solid;
+  font-size: 1.2em;
 }
 
 .resume:hover {
   opacity: 0.9;
   -webkit-box-shadow: 10px 10px 10px 10px rgba(206, 204, 204, 0.06);
-          box-shadow: 10px 10px 10px 10px rgba(206, 204, 204, 0.06);
+  box-shadow: 10px 10px 10px 10px rgba(206, 204, 204, 0.06);
   text-decoration: none;
   color: ivory;
 }
@@ -294,8 +295,8 @@ span {
   width: 21%;
   top: 37px;
   -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
   background: tomato;
 }
 
@@ -314,7 +315,7 @@ span {
   border: 1px solid #2c2c2c;
   margin-bottom: 1em;
   -webkit-box-shadow: 5px 5px 5px 0px rgba(38, 39, 36, 0.06);
-          box-shadow: 5px 5px 5px 0px rgba(38, 39, 36, 0.06);
+  box-shadow: 5px 5px 5px 0px rgba(38, 39, 36, 0.06);
 }
 
 .skills-img {
@@ -327,8 +328,8 @@ span {
   padding: 3em;
   display: block;
   -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
   text-align: center;
   color: #fff1cf;
   position: relative;
@@ -346,8 +347,8 @@ span {
   -ms-grid-columns: 1fr;
   grid-template-columns: 1fr;
   -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
   margin: 0 auto;
 }
 
@@ -361,8 +362,8 @@ span {
 .projects p {
   display: block;
   -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
   margin: 0 auto 2em;
   font-size: 1.2em;
   color: #a6a6a6;
@@ -383,8 +384,8 @@ a#git {
   border: 1px solid #fff1cf;
   text-align: center;
   -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
   /* border-radius: ; */
 }
 
@@ -395,8 +396,8 @@ a#web {
   border: 1px solid #fff1cf;
   font-weight: bolder;
   -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
 }
 
 a#git:hover {
@@ -416,11 +417,11 @@ a#web:hover {
   margin: 1em;
   height: 300px;
   -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
   place-content: center;
   -webkit-box-shadow: 5px 5px 5px 0px rgba(54, 54, 53, 0.06);
-          box-shadow: 5px 5px 5px 0px rgba(54, 54, 53, 0.06);
+  box-shadow: 5px 5px 5px 0px rgba(54, 54, 53, 0.06);
 }
 
 .movie {
@@ -434,8 +435,8 @@ a#web:hover {
   display: -ms-grid;
   display: grid;
   -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
   /* grid-template-columns: 300px; */
   place-content: 0 auto;
   margin: 0 auto;
@@ -443,12 +444,12 @@ a#web:hover {
   width: 100%;
   /* z-index: 1; */
   -webkit-box-shadow: 10px 10px 18px 10px rgba(0, 0, 0, 0.09);
-          box-shadow: 10px 10px 18px 10px rgba(0, 0, 0, 0.09);
+  box-shadow: 10px 10px 18px 10px rgba(0, 0, 0, 0.09);
 }
 
 .cs__item {
   -webkit-animation: fadeIn 2s forwards;
-          animation: fadeIn 2s forwards;
+  animation: fadeIn 2s forwards;
   opacity: 0;
 }
 
@@ -456,25 +457,24 @@ a#web:hover {
   from {
     opacity: 0;
     -webkit-transform: translateY(-40%);
-            transform: translateY(-40%);
+    transform: translateY(-40%);
   }
   to {
     opacity: 1;
     -webkit-transform: translateY(0);
-            transform: translateY(0);
+    transform: translateY(0);
   }
 }
-
 @keyframes fadeIn {
   from {
     opacity: 0;
     -webkit-transform: translateY(-40%);
-            transform: translateY(-40%);
+    transform: translateY(-40%);
   }
   to {
     opacity: 1;
     -webkit-transform: translateY(0);
-            transform: translateY(0);
+    transform: translateY(0);
   }
 }
 .cs__item:nth-of-type(1) {
@@ -482,7 +482,7 @@ a#web:hover {
   /* background: black; */
   border: unset;
   -webkit-animation: fadeIn 1.5s forwards;
-          animation: fadeIn 1.5s forwards;
+  animation: fadeIn 1.5s forwards;
   opacity: 0;
   position: relative;
   /* height: 87vh; */
@@ -581,8 +581,8 @@ a#web:hover {
   display: -ms-grid;
   display: grid;
   -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
   place-content: center;
   text-align: center;
   background: #fff1cf;
@@ -595,8 +595,8 @@ a#web:hover {
   display: block;
   /* flex-direction: column; */
   -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
   text-align: center;
   padding: 1em;
   /* padding-bottom: 2em; */
@@ -609,8 +609,8 @@ a#web:hover {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
 }
 
 /* .social-media a img {
@@ -712,8 +712,8 @@ h6 {
     display: -ms-flexbox;
     display: flex;
     -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
+    -ms-flex-pack: justify;
+    justify-content: space-between;
     margin: 0 auto;
     width: 80%;
   }
@@ -733,8 +733,8 @@ h6 {
     display: -ms-flexbox;
     display: flex;
     -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
   }
 
   ul {
