--- a/css/styles.css
+++ b/css/styles.css
@@ -14,22 +14,18 @@ html, body {
 }
 body {
     height: 100vh;
+    font-family: 'Open Sans', sans-serif;
+    font-weight: 400;
 }
 * {
     box-sizing: border-box;
   }
-/* header {
-    display: flex;
-    background: #332e2e;
-    padding: 0;
-} */
+
 header {
     position: fixed;
     display: flex;
-    /* padding: 1em; */
     justify-content: space-between;
     background: var(--primary-bg-color);
-    /* align-items: center; */
     z-index: 99;
     width: 100%;
 }
@@ -37,7 +33,6 @@ header {
 header h3 {
     margin: .5em auto;
 }
-/* #015668, #263f44, #ffd369, #fff1cf */
 
 a {
 	text-decoration: none;
@@ -52,13 +47,6 @@ a {
     margin-right: .5em;
     padding: .5em;
 }
-/* .menu {
-    display: block;
-    position: absolute;
-    height: 1em;
-    right: 1em;
-    top: 1em;
-} */
 ul {
     position: fixed;
     top: 0;
@@ -79,17 +67,12 @@ ul li a {
     padding: 1.2em;
     display: block;
     font-size: 1rem;
-    /* margin-left: -4em; */
 }
 
 ul li a:hover {
     color: #fff1cf;
     opacity: 0.5; 
 }
-/* 
-#abt-link {
-    margin-top: 10em;
-} */
 .exit svg {
     width: 1.5em;
     position: absolute;
@@ -112,10 +95,6 @@ span {
 #home {
     padding: .5em;
     display: block;
-    /* height: 80vh; */
-    /* place-content: center; */
-    /* justify-content: center;
-    width: 100%; */
     background: var(--primary-bg-color);
     color: ivory;
     position: relative;
@@ -126,10 +105,8 @@ span {
     justify-content: center;
     text-align: center;
     place-content: center;
-    width: 60%;
     margin: 0 auto;
     clip-path: polygon(0 100%, 100% 100%, 100% 100%, 0% 100%); 
-    /* padding: 0 2em; */
 }
 .profile-content h1 {
     display: block;
@@ -139,6 +116,7 @@ span {
     display: block;
     width: 90%;
     margin: 0 auto 1em;
+    letter-spacing: .1em;
 }
 
 .profile-img {
@@ -153,62 +131,65 @@ span {
     margin-bottom: 2em;
     clip-path: polygon(0 100%, 100% 100%, 100% 100%, 0% 100%); 
 }
-#btn-work {
-    /* display: block; */
+#btn-project {
     padding: .4em .5em;
     color: var(--primary-bg-color);
     background: #fff1cf;
     cursor: pointer;
-    /* margin: 1em auto 2em; */
     font-size: 1.2em; 
-    border: 1px solid #ffd369;
+    transition: font-size .8s .3s, transform 1s .2s ease-out;
 }
 #btn-contact {
-    /* display: block; */
     padding: .5em .5em;
     color: var(--primary-bg-color);
-    background: #ffd369;
+    background: #92d5e6;
     cursor: pointer;
-    /* margin: 1em auto 2em; */
     font-size: 1.2em; 
-    border: 1px solid #ffd369;
-    font-weight: bold;
-
-    /* border-radius: .3em; */
-    /* justify-content: center; */
-    /* text-align: center; */
+    border: 1px solid #92d5e6;
+    font-weight: bolder;
+    transition: font-size .8s .3s, transform 1s .2s ease-out;
 }
-#btn-work:hover {
+
+#btn-project:hover {
     opacity: .9;
-    box-shadow: 10px 10px 10px 0px rgb(206, 204, 204,.06);
+    transform: scaleX(1.2);
+    color: #ff8882;
+    background-color: #393939;
+    border: 1px solid #ff8882;
+}
+#btn-contact:hover {
+    opacity: .9;
+    transform: scale(1.1,1.1);
+    color: #92d5e6;
+    transform: scaleX(1.2);
+    background-color: #393939;
+    border: 1px solid #92d5e6;
 }
 
 #about {
     display: grid;
     justify-content: center;
     place-content: center;
-    /* height: 700px; */
     position: relative;
-    /* padding: 1em; */
 }
 #about img {
     height: 10px;
     width: 100%;
 }
 .iam {
-    /* padding: .5em; */
     display: grid;
     place-content: center;
     justify-content: center;
     width: 90%;
     margin: 0 auto;
-    font-size: 1.2em;
+    font-size: 1em;
+    letter-spacing: .1em;
 }
 
 .iam h1 {
     display: block;
     text-align: center;
-    margin-top: 2em;
+    margin-top: 3em;
     margin-bottom: .5em;
 }
 
@@ -217,25 +198,27 @@ span {
     width: 250px;
     padding: .5em .6em;
     background: var(--primary-bg-color);
-    color: #ffd369;
+    color: #fff1cf;
     cursor: pointer;
     margin: 1em auto;
     justify-content: center;
     text-align: center;
     border: 1px var(--primary-bg-color) solid;
     font-size: 1.2em;
+    transition: font-size .8s .3s, transform 1s .2s ease-out;
 }
 
 .resume:hover {
-    opacity: .9;
-    box-shadow: 10px 10px 10px 10px rgb(206, 204, 204,.06);
+    box-shadow: 10px 10px 15px 0px rgb(255, 136, 130,.3);
     text-decoration: none;
-    color: ivory;
+    color: #ff8882; 
+    transform: scaleX(1.2);
+    transition: all .5s .5s linear;
 }
 
 #skills { 
     padding: 3em;   
-    background: #ffd369;
+    background: #fff1cf;
     position: relative;
 }
 
@@ -262,7 +245,6 @@ span {
 }
 .skills-list__item {
     text-align: center;
-    /* place-content: center; */
     padding: 2em;
     border: 1px solid #2c2c2c;
     margin-bottom: 1em;
@@ -273,17 +255,17 @@ span {
     padding: 1em;
     margin: 0 auto;
 }
-#work {
-    padding: 3em;
+#project {
+    padding: 1em;
     display: block;
     justify-content: center;
     text-align: center;
     color: #fff1cf;
     position: relative;
 }
-#work h1 {
+#project h1 {
     color: var(--primary-bg-color);
-    margin: 1em auto 0;
+    margin: 1em auto .5em;
     padding: 1em auto .5em;
 }
 .projects {
@@ -296,21 +278,20 @@ span {
     font-weight: bold;
     font-size: 3em;
     margin: 0;
-    color: #ff5757;
+    color: #ff8882;
 }
 .projects p {
     display: block;
     justify-content: center;
     margin: 0 auto 2em;
     font-size: 1.2em;
-    color: #a6a6a6;
+    color: #fff1cf;
     width: 85%;
 }
 /* #015668, #263f44, #ffd369, #fff1cf */
 
 .projects__item div {
     display: inline-flex;
-    /* width: 60%;  */
     margin: 0 auto;
 }
 
@@ -319,7 +300,6 @@ a#git {
     border: 1px solid #fff1cf;
     text-align: center;
     justify-content: center;
-    /* border-radius: ; */
 }
 
 a#web {
@@ -331,39 +311,31 @@ a#web {
     justify-content: center;
 }
 a#git:hover {
-    color: #ff5757;
+    color: #ff8882;
 }
 a#web:hover {
-    color: #ff5757;
+    color: #ff8882;
 }
 .projects__item {
-    /* padding: .5em; */
     display: grid;
-    /* background: hsla(44, 90%, 72%, 0.878); */
     border: 1px solid var(--primary-bg-color);
-    margin: 1em;
+    margin: .5em;
     height: 300px;
     justify-content: center;
     place-content: center;
     box-shadow: 5px 5px 5px 0px rgba(54, 54, 53, 0.06);
 }
 
-.movie {
-    background-image: url('../img/movie.png');
-    background-size: cover;
-    background-position: center;
-    opacity: 0.85;
+.movie, .meet, .quiz, .dog {
+    background-color: #393939;
 }
 
 .cs img {
     display: grid;
     justify-content: center;
-    /* grid-template-columns: 300px; */
     place-content: var(--margin-center);
     margin: 0 auto;
-    /* padding: 1em; */
     width: 100%;
-    /* z-index: 1; */
     box-shadow: 10px 10px 18px 10px rgba(0,0,0,.09);
 }
 
@@ -384,13 +356,10 @@ a#web:hover {
   }
   
 .cs__item:nth-of-type(1) {
-    /* width: unset; */
-    /* background: black; */
     border: unset;
     animation: fadeIn 1.5s forwards;
     opacity: 0;
     position: relative;
-    /* height: 87vh; */
     padding: 0;
 }
   
@@ -406,54 +375,32 @@ a#web:hover {
 }
 
 #doc {
-    color: #ff5757 !important;
+    color: #ff8882 !important;
     position: absolute;
     top: 20px;
     right: 100px;
 }
 #site {
     color: black;
-    background: #ff5757;
+    background: #ff8882;
     position: absolute;
     top: 20px;
     right: 20px;
 }
 #site:hover {
     background-color: black;
-    color: #ff5757;
-    border: 1px solid #ff5757;
-}
-.meet {
-    background-image: url('../img/meet.png');
-    background-size: cover;
-    background-position: center;
-    opacity: 0.85;
-}
-.quiz {
-    background-image: url('../img/quizbg.png');
-    background-size: cover;
-    background-position: center;
-    opacity: 0.85;
-}
-.dog {
-    background-image: url('../img/dog.png');
-    background-size: cover;
-    background-position: center;
-    background-position: center;
-    opacity: 1;
+    color: #ff8882;
+    border: 1px solid #ff8882;
 }
 .contact {
-    /* background: var(--tomato); */
-    background-image: url('../img/letswork.png');
-    background-size: cover;
-    color: rgba(1,12,61,1);
-    /* background: #ffd369; */
     text-decoration: none;
-    /* font-weight: bolder; */
-    /* height: 1000px; */
+    /* background-image: url('../img/homepic.jpg');
+    background-size: cover; */
+    background-color: #393939;
 }
 .contact h2 {
-    color: #2c2c2c;
+    /* color: #2c2c2c; */
+    color: yellowgreen;
     width: 70%;
     margin: 0 auto 1em; 
     font-size: 1.5em;
@@ -462,14 +409,15 @@ a#web:hover {
     display: block;
     margin: 0 auto;
     padding: 1em;
-    background: #2c2c2c;
-    border: 1px #ff5757 solid;
+    background: #393939;
+    border: 1px yellowgreen solid;
     font-weight: bold;
     font-size: 1.2em;
-    color: #fff1cf;
+    color: yellowgreen;
 }
 .contact a:hover {
-    border: 1px yellow solid;
+    color: #2c2c2c;
+    background-color: #fff;
 }
 
 #contact {
@@ -486,28 +434,22 @@ a#web:hover {
 
 .page-footer {
     display: block;
-    /* flex-direction: column; */
     justify-content: center;
     text-align: center;
     padding: 1em;
-    /* padding-bottom: 2em; */
-    /* background-color: #332e2e; */
-    background-color: #ffd369;
+    background-color: #263f44;
 }
 .social-media {
     display: flex;
     justify-content: center;
 }
-/* .social-media a img {
-    background: #fff1cf;
-    border-radius: 50%;
-    border: 1px solid #fff1cf;
-} */
+
 .social-media a {
     padding: .5em;
 }
 h6 {
-    color: grey;
+    color: #ff8882;
+    opacity: .6;
     margin: 0;
 }
 .msg {
@@ -515,7 +457,7 @@ h6 {
     margin: 0 auto 1em;
     padding: 1em;
     font-size: 1.2em;
-    width: 80%;
+    width: 100%;
 }
 
 .ids a{
@@ -540,29 +482,44 @@ h6 {
     font-weight: bold;
 }
 
-@media all and (min-width: 450px) {
+@media all and (min-width: 500px) {
+    .skills-list {
+        max-width: 90%;
+        grid-template-columns: repeat(2, 1fr);
+        grid-gap: 1em;
+        margin-top: 1em;
+    }
+}
+
+@media all and (min-width: 650px) {
     .profile-img {
         width: 400px;
     }
+    .profile-content {
+        width: 60%;
+    }
+    #project {
+        padding: 3em;
+    }
     .projects {
         grid-template-columns: 1fr 1fr; 
-        grid-gap: 1em;
+        grid-gap: 2em;
+    }
+    #about {
+        margin: 7em auto;
     }
     .iam {
         display: block;
-        width: 400px;
+        width: 85%;
+    }
+    .iam p {
+        margin: 3em auto;
     }
     .projects__item {
         height: 450px;
     }
     .projects__item:nth-of-type(5) {
         grid-area: 3/1/4/3;
-    }
-    .skills-list {
-        max-width: 90%;
-        grid-template-columns: repeat(4, 1fr);
-        grid-gap: 1em;
-        margin-top: 1em;
     }
     .skills-list__item {
         margin: unset;
@@ -581,8 +538,10 @@ h6 {
         width: 80%;
     }
     .ids a {
-        /* flex: 30%; */
         width: 30% ;
+    }
+    .msg {
+        width: 80%;
     }
 }
 
@@ -599,27 +558,20 @@ h6 {
         background: none;
         height: unset;
         position: unset;
-        /* align-content: center; */
     }
     ul li a {
-        /* font-size: .9em; */
         margin-left: unset;
         padding: 0 .5rem;
     }
     .active {
-        color: #ffd369;
+        color: #ff8882;
     }
     #contact {
-        height: 670px;
+        height: 700px;
     }
     .contact h2 {
         font-size: 2.5em;
     }
-    /* .msg {
-    }    
-    .ids a{  
-        width: 90%;
-    } */
     .contact__item{
         width: 70%;
     }
@@ -638,12 +590,8 @@ h6 {
     .projects {
         grid-template-columns: 1fr 1fr 1fr; 
     }
-    .iam {
-        display: block;
-        width: 750px;
-    }
-    .projects__item:nth-of-type(5) {
-        grid-area: 2/2/3/4;
+    .projects__item:nth-of-type(4) {
+        grid-area: 2/1/3/4;
     }
     .skills-list {
         display: grid;
