--- a/css/styles.css
+++ b/css/styles.css
@@ -86,12 +86,7 @@ ul li a:hover {
 .open-nav a {
     font-size: 1.4em;
 }
-span {
-    color: #ffd369;
-    font-style: italic;
-    font-size: 1.2em;
-    font-weight: bold;
-}
+
 #home {
     padding: .5em;
     display: block;
@@ -110,13 +105,21 @@ span {
 }
 .profile-content h1 {
     display: block;
-    margin-bottom: .5em;
+    color: #ff8882; 
+    font-weight: bolder;
+    padding: 0;
+    margin: 0;
+    justify-content: center !important;
+    font-style: italic;
+    font-size: 2em;
 }
 .profile-content p {
+    color: #fff;
     display: block;
     width: 90%;
-    margin: 0 auto 1em;
-    letter-spacing: .1em;
+    margin: 0 auto .5em;
+    text-align: center;
+    font-size: 2em;
 }
 
 .profile-img {
@@ -133,21 +136,25 @@ span {
 }
 #btn-project {
     padding: .4em .5em;
+    width: 150px;
     color: var(--primary-bg-color);
     background: #fff1cf;
     cursor: pointer;
     font-size: 1.2em; 
     transition: font-size .8s .3s, transform 1s .2s ease-out;
+    justify-content: center;
 }
 #btn-contact {
     padding: .5em .5em;
+    width: 150px;
     color: var(--primary-bg-color);
     background: #92d5e6;
     cursor: pointer;
     font-size: 1.2em; 
-    border: 1px solid #92d5e6;
+    border: 1.2px solid #92d5e6;
     font-weight: bolder;
     transition: font-size .8s .3s, transform 1s .2s ease-out;
+    justify-content: center;
 }
 
 #btn-project:hover {
@@ -155,7 +162,7 @@ span {
     transform: scaleX(1.2);
     color: #ff8882;
     background-color: #393939;
-    border: 1px solid #ff8882;
+    border: 1.2px solid #ff8882;
 }
 #btn-contact:hover {
     opacity: .9;
@@ -163,7 +170,7 @@ span {
     color: #92d5e6;
     transform: scaleX(1.2);
     background-color: #393939;
-    border: 1px solid #92d5e6;
+    border: 1.2px solid #92d5e6;
 }
 
 #about {
@@ -171,11 +178,24 @@ span {
     justify-content: center;
     place-content: center;
     position: relative;
+    text-align: justify;
 }
-#about img {
-    height: 10px;
-    width: 100%;
+
+.abt {
+    display: flex;
 }
+.abt img {
+    display: none;
+    margin-top: 4em;
+    width: 80%;
+}
+
+.abt-item p {
+    padding: 1em;
+    background: rgb(255,255,255);
+    background: linear-gradient(90deg, rgba(255,255,255,1) 0%, rgba(255,234,232,1) 100%);
+}
+
 .iam {
     display: grid;
     place-content: center;
@@ -191,8 +211,11 @@ span {
     text-align: center;
     margin-top: 3em;
     margin-bottom: .5em;
+    color: grey;
 }
-
+.iam p{
+    font-size: 1.3em;
+}
 .resume {
     display: block;
     width: 250px;
@@ -203,7 +226,7 @@ span {
     margin: 1em auto;
     justify-content: center;
     text-align: center;
-    border: 1px var(--primary-bg-color) solid;
+    border: 1.2px var(--primary-bg-color) solid;
     font-size: 1.2em;
     transition: font-size .8s .3s, transform 1s .2s ease-out;
 }
@@ -212,6 +235,7 @@ span {
     box-shadow: 10px 10px 15px 0px rgb(255, 136, 130,.3);
     text-decoration: none;
     color: #ff8882; 
+    /* border-radius: 2em; */
     transform: scaleX(1.2);
     transition: all .5s .5s linear;
 }
@@ -227,6 +251,7 @@ span {
     color: var(--primary-bg-color);
     padding: 1em auto;
     text-align: center;
+    color: grey;
 }
 #skills h2:after {
     content: '';
@@ -246,7 +271,7 @@ span {
 .skills-list__item {
     text-align: center;
     padding: 2em;
-    border: 1px solid #2c2c2c;
+    border: 1.2px solid #2c2c2c;
     margin-bottom: 1em;
     box-shadow: 5px 5px 5px 0px rgba(38, 39, 36, 0.06);
 }
@@ -264,7 +289,7 @@ span {
     position: relative;
 }
 #project h1 {
-    color: var(--primary-bg-color);
+    color: grey;
     margin: 1em auto .5em;
     padding: 1em auto .5em;
 }
@@ -278,6 +303,7 @@ span {
     font-weight: bold;
     font-size: 3em;
     margin: 0;
+    margin-bottom: .5em;
     color: #ff8882;
 }
 .projects p {
@@ -295,30 +321,31 @@ span {
     margin: 0 auto;
 }
 
-a#git {
+a#git, a#api {
     padding: 1em;
-    border: 1px solid #fff1cf;
+    border: 1.2px solid #fff1cf;
     text-align: center;
     justify-content: center;
 }
+/* a#api {
+    padding: auto 2em auto;
+} */
 
-a#web {
+a#web, a#case {
     padding: 1em;
     color: var(--primary-bg-color);
     background: #fff1cf;
-    border: 1px solid #fff1cf;
+    border: 1.2px solid #fff1cf;
     font-weight: bolder;
     justify-content: center;
 }
-a#git:hover {
+a:hover, a#web:hover, a#case:hover {
     color: #ff8882;
 }
-a#web:hover {
-    color: #ff8882;
-}
+
 .projects__item {
     display: grid;
-    border: 1px solid var(--primary-bg-color);
+    border: 1.2px solid var(--primary-bg-color);
     margin: .5em;
     height: 300px;
     justify-content: center;
@@ -326,7 +353,7 @@ a#web:hover {
     box-shadow: 5px 5px 5px 0px rgba(54, 54, 53, 0.06);
 }
 
-.movie, .meet, .quiz, .dog {
+.movie, .meet, .quiz, .dog, .chat {
     background-color: #393939;
 }
 
@@ -390,7 +417,7 @@ a#web:hover {
 #site:hover {
     background-color: black;
     color: #ff8882;
-    border: 1px solid #ff8882;
+    border: 1.2px solid #ff8882;
 }
 .contact {
     text-decoration: none;
@@ -410,7 +437,7 @@ a#web:hover {
     margin: 0 auto;
     padding: 1em;
     background: #393939;
-    border: 1px yellowgreen solid;
+    border: 1.2px yellowgreen solid;
     font-weight: bold;
     font-size: 1.2em;
     color: yellowgreen;
@@ -421,15 +448,20 @@ a#web:hover {
 }
 
 #contact {
-    padding: 5em;
+    padding: 3em;
     display: grid;
     justify-content: center;
     place-content: center;
     text-align: center;
     background: #fff1cf;
     position: relative;
-    margin: 0;
+    margin: 0 auto 2em;
     overflow:scroll;
+    z-index: -99;
+}
+
+#contact h1 {
+    color: grey;
 }
 
 .page-footer {
@@ -437,7 +469,7 @@ a#web:hover {
     justify-content: center;
     text-align: center;
     padding: 1em;
-    background-color: #263f44;
+    background-color: #393939;
 }
 .social-media {
     display: flex;
@@ -456,30 +488,45 @@ h6 {
     display: block;
     margin: 0 auto 1em;
     padding: 1em;
-    font-size: 1.2em;
+    font-size: 3em;
     width: 100%;
+}
+span {
+    position: relative;
+    color: #2c2c2c;
+}
+
+span:before {
+    content: ' ';
+    position: absolute;
+    bottom: 0;
+    left: -7%;
+    height: 21px;
+    width: 108%;
+    background: #ff8882;
+    z-index: -1;
 }
 
 .ids a{
     display: block;
     margin: 0 auto;
     padding: .7em;
-    background: #2c2c2c;
-    border: 1px #263f44 solid;
     font-weight: bold;
     font-size: 1.2em;
-    color: #fff1cf;   
     width: 90%;
+    color: #ff8882;
+    border: 1.2px #ff8882 solid;
 }
 .ids a:hover {
-    background: #263f44;
-    color: #fff1cf;
+    border: 1.2px #2c2c2c solid;
+    color: #2c2c2c;
+    /* border-radius: 2em; */
 }
 
 .msg p span {
-    color: #263f44;
+    color: #ff8882;
     font-style: italic;
-    font-weight: bold;
+    font-weight: bolder;
 }
 
 @media all and (min-width: 500px) {
@@ -496,14 +543,17 @@ h6 {
         width: 400px;
     }
     .profile-content {
-        width: 60%;
+        width: 70%;
+    }
+    .profile-content p {
+        text-align: justify;
     }
     #project {
         padding: 3em;
     }
     .projects {
         grid-template-columns: 1fr 1fr; 
-        grid-gap: 2em;
+        grid-gap: 1em;
     }
     #about {
         margin: 7em auto;
@@ -566,9 +616,16 @@ h6 {
     .active {
         color: #ff8882;
     }
-    #contact {
-        height: 700px;
+    .abt img {
+        display: block;
     }
+    #contact {
+        /* height: 700px; */
+        padding: 5em;
+    }
+    /* .msg {
+        padding: em;
+        /* width: 70%; */
     .contact h2 {
         font-size: 2.5em;
     }
@@ -589,9 +646,10 @@ h6 {
     }
     .projects {
         grid-template-columns: 1fr 1fr 1fr; 
+        grid-gap: 2em;
     }
-    .projects__item:nth-of-type(4) {
-        grid-area: 2/1/3/4;
+    .projects__item:nth-of-type(5) {
+        grid-area: 2/2/3/4;
     }
     .skills-list {
         display: grid;
