--- a/css/styles.css
+++ b/css/styles.css
@@ -181,17 +181,14 @@ ul li a:hover {
     text-align: justify;
 }
 
-.abt {
-    display: flex;
-}
 .abt img {
-    display: none;
-    margin-top: 4em;
-    width: 80%;
+    margin-top: 2em;
+    width: 100%;
+    height: 250px;
 }
 
 .abt-item p {
-    padding: 1em;
+    padding: 2em;
     background: rgb(255,255,255);
     background: linear-gradient(90deg, rgba(255,255,255,1) 0%, rgba(255,234,232,1) 100%);
 }
@@ -500,7 +497,7 @@ span:before {
     content: ' ';
     position: absolute;
     bottom: 0;
-    left: -7%;
+    left: -5%;
     height: 21px;
     width: 108%;
     background: #ff8882;
