--- a/css/style.production.css
+++ b/css/style.production.css
@@ -17,8 +17,16 @@ body {
 * {
     -webkit-box-sizing: border-box;
             box-sizing: border-box;
-  }
+}
 
+h1 {
+    text-transform: uppercase;
+} 
+
+#name {
+    text-transform: unset;
+}
+  
 header {
     position: fixed;
     display: -webkit-box;
@@ -126,7 +134,7 @@ ul li a:hover {
 .profile-content p {
     color: #fff;
     display: block;
-    width: 90%;
+    width: 95%;
     margin: 0 auto .5em;
     text-align: center;
     font-size: 2em;
@@ -214,21 +222,23 @@ ul li a:hover {
             justify-content: center;
     place-content: center;
     position: relative;
-    text-align: justify;
+    text-align: left;
 }
 
 .abt img {
     margin-top: 2em;
     width: 100%;
-    height: 250px;
+    height: 40vh;
 }
 
 .abt-item p {
-    padding: 2em;
+    padding: 1em;
     background: rgb(255,255,255);
     background: -webkit-gradient(linear, left top, right top, from(rgba(255,255,255,1)), to(rgba(255,234,232,1)));
     background: -o-linear-gradient(left, rgba(255,255,255,1) 0%, rgba(255,234,232,1) 100%);
     background: linear-gradient(90deg, rgba(255,255,255,1) 0%, rgba(255,234,232,1) 100%);
+    font-size: 2em;
+    letter-spacing: .1em;
 }
 
 .iam {
@@ -249,7 +259,7 @@ ul li a:hover {
     text-align: center;
     margin-top: 3em;
     margin-bottom: .5em;
-    color: grey;
+    color: #ff8882;
 }
 .iam p{
     font-size: 1.3em;
@@ -300,7 +310,7 @@ ul li a:hover {
     color: #393939;
     padding: 1em auto;
     text-align: center;
-    color: grey;
+    color: #ff8882;
 }
 #skills h2:after {
     content: '';
@@ -335,7 +345,7 @@ ul li a:hover {
     margin: 0 auto;
 }
 #project {
-    padding: 1em;
+    padding: 1.2em;
     display: block;
     -webkit-box-pack: center;
         -ms-flex-pack: center;
@@ -345,8 +355,8 @@ ul li a:hover {
     position: relative;
 }
 #project h1 {
-    color: grey;
-    margin: 1em auto .5em;
+    color: #ff8882;
+    margin: 1.5em auto .6em;
     padding: 1em auto .5em;
 }
 .projects {
@@ -372,7 +382,7 @@ ul li a:hover {
         -ms-flex-pack: center;
             justify-content: center;
     margin: 0 auto 2em;
-    font-size: 1.2em;
+    font-size: 1.4em;
     color: #fff1cf;
     width: 85%;
 }
@@ -427,7 +437,7 @@ a:hover, a#web:hover, a#case:hover {
     display: grid;
     border: 1.2px solid #393939;
     margin: .5em;
-    height: 300px;
+    height: 400px;
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center;
@@ -568,7 +578,7 @@ a:hover, a#web:hover, a#case:hover {
 }
 
 #contact h1 {
-    color: grey;
+    color: #ff8882;
 }
 
 .page-footer {
@@ -600,8 +610,8 @@ h6 {
 .msg {
     display: block;
     margin: 0 auto 1em;
-    padding: 1em;
-    font-size: 3em;
+    padding: .5em;
+    font-size: 2em;
     width: 100%;
 }
 span {
@@ -653,6 +663,11 @@ span:before {
 }
 
 @media all and (min-width: 650px) {
+
+    .abt-item p {
+        padding: 2em;
+    }
+
     .profile-img {
         width: 400px;
     }
@@ -660,7 +675,7 @@ span:before {
         width: 70%;
     }
     .profile-content p {
-        text-align: justify;
+        text-align: left;
     }
     #project {
         padding: 3em;
@@ -678,7 +693,7 @@ span:before {
         width: 85%;
     }
     .iam p {
-        margin: 3em auto;
+        margin: 2.5em auto;
     }
     .projects__item {
         height: 450px;
@@ -714,7 +729,9 @@ span:before {
         width: 30% ;
     }
     .msg {
+        /* font-size: 3em; */
         width: 80%;
+        padding: 1em;
     }
 }
 
@@ -752,9 +769,6 @@ span:before {
         /* height: 700px; */
         padding: 5em;
     }
-    /* .msg {
-        padding: em;
-        /* width: 70%; */
     .contact h2 {
         font-size: 2.5em;
     }
