--- a/css/styles.css
+++ b/css/styles.css
@@ -19,8 +19,16 @@ body {
 }
 * {
     box-sizing: border-box;
-  }
+}
 
+h1 {
+    text-transform: uppercase;
+} 
+
+#name {
+    text-transform: unset;
+}
+  
 header {
     position: fixed;
     display: flex;
@@ -116,7 +124,7 @@ ul li a:hover {
 .profile-content p {
     color: #fff;
     display: block;
-    width: 90%;
+    width: 95%;
     margin: 0 auto .5em;
     text-align: center;
     font-size: 2em;
@@ -178,19 +186,21 @@ ul li a:hover {
     justify-content: center;
     place-content: center;
     position: relative;
-    text-align: justify;
+    text-align: left;
 }
 
 .abt img {
     margin-top: 2em;
     width: 100%;
-    height: 250px;
+    height: 40vh;
 }
 
 .abt-item p {
-    padding: 2em;
+    padding: 1em;
     background: rgb(255,255,255);
     background: linear-gradient(90deg, rgba(255,255,255,1) 0%, rgba(255,234,232,1) 100%);
+    font-size: 2em;
+    letter-spacing: .1em;
 }
 
 .iam {
@@ -208,7 +218,7 @@ ul li a:hover {
     text-align: center;
     margin-top: 3em;
     margin-bottom: .5em;
-    color: grey;
+    color: #ff8882;
 }
 .iam p{
     font-size: 1.3em;
@@ -248,7 +258,7 @@ ul li a:hover {
     color: var(--primary-bg-color);
     padding: 1em auto;
     text-align: center;
-    color: grey;
+    color: #ff8882;
 }
 #skills h2:after {
     content: '';
@@ -278,7 +288,7 @@ ul li a:hover {
     margin: 0 auto;
 }
 #project {
-    padding: 1em;
+    padding: 1.2em;
     display: block;
     justify-content: center;
     text-align: center;
@@ -286,8 +296,8 @@ ul li a:hover {
     position: relative;
 }
 #project h1 {
-    color: grey;
-    margin: 1em auto .5em;
+    color: #ff8882;
+    margin: 1.5em auto .6em;
     padding: 1em auto .5em;
 }
 .projects {
@@ -307,7 +317,7 @@ ul li a:hover {
     display: block;
     justify-content: center;
     margin: 0 auto 2em;
-    font-size: 1.2em;
+    font-size: 1.4em;
     color: #fff1cf;
     width: 85%;
 }
@@ -344,7 +354,7 @@ a:hover, a#web:hover, a#case:hover {
     display: grid;
     border: 1.2px solid var(--primary-bg-color);
     margin: .5em;
-    height: 300px;
+    height: 400px;
     justify-content: center;
     place-content: center;
     box-shadow: 5px 5px 5px 0px rgba(54, 54, 53, 0.06);
@@ -458,7 +468,7 @@ a:hover, a#web:hover, a#case:hover {
 }
 
 #contact h1 {
-    color: grey;
+    color: #ff8882;
 }
 
 .page-footer {
@@ -484,8 +494,8 @@ h6 {
 .msg {
     display: block;
     margin: 0 auto 1em;
-    padding: 1em;
-    font-size: 3em;
+    padding: .5em;
+    font-size: 2em;
     width: 100%;
 }
 span {
@@ -536,6 +546,11 @@ span:before {
 }
 
 @media all and (min-width: 650px) {
+
+    .abt-item p {
+        padding: 2em;
+    }
+
     .profile-img {
         width: 400px;
     }
@@ -543,7 +558,7 @@ span:before {
         width: 70%;
     }
     .profile-content p {
-        text-align: justify;
+        text-align: left;
     }
     #project {
         padding: 3em;
@@ -560,7 +575,7 @@ span:before {
         width: 85%;
     }
     .iam p {
-        margin: 3em auto;
+        margin: 2.5em auto;
     }
     .projects__item {
         height: 450px;
@@ -588,7 +603,9 @@ span:before {
         width: 30% ;
     }
     .msg {
+        /* font-size: 3em; */
         width: 80%;
+        padding: 1em;
     }
 }
 
@@ -620,9 +637,6 @@ span:before {
         /* height: 700px; */
         padding: 5em;
     }
-    /* .msg {
-        padding: em;
-        /* width: 70%; */
     .contact h2 {
         font-size: 2.5em;
     }
