--- a/css/style.production.css
+++ b/css/style.production.css
@@ -5,6 +5,16 @@
 * Browsers: last 4 version
 */
 
+:root {
+    --primary-bg-color: #393939;
+    --nav-bg-color: #015668;
+    --tera-bg-color: #263f44; 
+    --primary-color: #ffd369;
+    --ter-bg-color: #fff1cf;
+    --font-weight-bold: bold;
+    --margin-center: 0 auto;
+}
+
 html, body {
 	margin: 0;
     padding: 0;
@@ -35,7 +45,7 @@ header {
     -webkit-box-pack: justify;
         -ms-flex-pack: justify;
             justify-content: space-between;
-    background: #393939;
+    background: var(--primary-bg-color);
     z-index: 99;
     width: 100%;
 }
@@ -63,7 +73,7 @@ ul {
     position: fixed;
     top: 0;
     left: 0;
-    background: #263f44;
+    background: #393939;
     height: 100vh;
     width: 100%;
     padding: 0;
@@ -103,7 +113,7 @@ ul li a:hover {
 #home {
     padding: .5em;
     display: block;
-    background: #393939;
+    background: var(--primary-bg-color);
     color: ivory;
     position: relative;
     top: 3em;
@@ -160,7 +170,7 @@ ul li a:hover {
 #btn-project {
     padding: .4em .5em;
     width: 150px;
-    color: #393939;
+    color: var(--primary-bg-color);
     background: #fff1cf;
     cursor: pointer;
     font-size: 1.2em; 
@@ -176,11 +186,11 @@ ul li a:hover {
 #btn-contact {
     padding: .5em .5em;
     width: 150px;
-    color: #393939;
-    background: #92d5e6;
+    color: var(--primary-bg-color);
+    background: #ff8882;
     cursor: pointer;
     font-size: 1.2em; 
-    border: 1.2px solid #92d5e6;
+    border: 1.2px solid #ff8882;
     font-weight: bolder;
     -webkit-transition: font-size .8s .3s, -webkit-transform 1s .2s ease-out;
     transition: font-size .8s .3s, -webkit-transform 1s .2s ease-out;
@@ -206,12 +216,12 @@ ul li a:hover {
     -webkit-transform: scale(1.1,1.1);
         -ms-transform: scale(1.1,1.1);
             transform: scale(1.1,1.1);
-    color: #92d5e6;
+    color: #fff1cf;
     -webkit-transform: scaleX(1.2);
         -ms-transform: scaleX(1.2);
             transform: scaleX(1.2);
     background-color: #393939;
-    border: 1.2px solid #92d5e6;
+    border: 1.2px solid #fff1cf;
 }
 
 #about {
@@ -268,7 +278,7 @@ ul li a:hover {
     display: block;
     width: 250px;
     padding: .5em .6em;
-    background: #393939;
+    background: var(--primary-bg-color);
     color: #fff1cf;
     cursor: pointer;
     margin: 1em auto;
@@ -276,7 +286,7 @@ ul li a:hover {
         -ms-flex-pack: center;
             justify-content: center;
     text-align: center;
-    border: 1.2px #393939 solid;
+    border: 1.2px var(--primary-bg-color) solid;
     font-size: 1.2em;
     -webkit-transition: font-size .8s .3s, -webkit-transform 1s .2s ease-out;
     transition: font-size .8s .3s, -webkit-transform 1s .2s ease-out;
@@ -307,7 +317,7 @@ ul li a:hover {
 
 #skills h1 {
     display: block;
-    color: #393939;
+    color: var(--primary-bg-color);
     padding: 1em auto;
     text-align: center;
     color: #ff8882;
@@ -407,20 +417,9 @@ a#git, a#api {
     padding: auto 2em auto;
 } */
 
-a#web {
+a#web, a#case {
     padding: 1em;
-    color: #393939;
-    background: #fff1cf;
-    border: 1.2px solid #fff1cf;
-    font-weight: bolder;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-}
-
-a#case {
-    padding: 1em;
-    color: #393939;
+    color: var(--primary-bg-color);
     background: #fff1cf;
     border: 1.2px solid #fff1cf;
     font-weight: bolder;
@@ -435,7 +434,7 @@ a:hover, a#web:hover, a#case:hover {
 .projects__item {
     display: -ms-grid;
     display: grid;
-    border: 1.2px solid #393939;
+    border: 1.2px solid var(--primary-bg-color);
     margin: .5em;
     height: 400px;
     -webkit-box-pack: center;
@@ -456,7 +455,7 @@ a:hover, a#web:hover, a#case:hover {
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center;
-    place-content: 0 auto;
+    place-content: var(--margin-center);
     margin: 0 auto;
     width: 100%;
     -webkit-box-shadow: 10px 10px 18px 10px rgba(0,0,0,.09);
@@ -611,7 +610,7 @@ h6 {
     display: block;
     margin: 0 auto 1em;
     padding: .5em;
-    font-size: 2em;
+    font-size: 2.4em;
     width: 100%;
 }
 span {
@@ -624,7 +623,7 @@ span:before {
     position: absolute;
     bottom: 0;
     left: -5%;
-    height: 21px;
+    height: 18px;
     width: 108%;
     background: #ff8882;
     z-index: -1;
