--- a/css/style.production.css
+++ b/css/style.production.css
@@ -22,6 +22,7 @@ body {
 h1 {
     text-transform: uppercase;
     font-family: 'Playfair Display', serif;
+    letter-spacing: .03em;
 } 
 
 #name {
@@ -76,7 +77,7 @@ ul {
 }
 
 ul li a {
-    color: #fff1cf;
+    color: #aea493;
     padding: 1.2em;
     display: block;
     font-size: 1rem;
@@ -84,7 +85,7 @@ ul li a {
 
 ul li a:hover {
     color: #fff1cf;
-    opacity: 0.5; 
+    /* opacity: 0.5;  */
 }
 .exit svg {
     width: 1.5em;
@@ -132,7 +133,7 @@ ul li a:hover {
     font-size: 2.4em;
 }
 .profile-content p {
-    color: #fff;
+    color: #aea493;
     display: block;
     width: 95%;
     margin: 0 auto .5em;
@@ -159,25 +160,25 @@ ul li a:hover {
             clip-path: polygon(0 100%, 100% 100%, 100% 100%, 0% 100%); 
 }
 #btn-project {
-    padding: .4em .5em;
+    padding: .9em 1em;
     width: 150px;
     color: #393939;
     background: #fff1cf;
     cursor: pointer;
-    font-size: 1em; 
+    font-size: 1.1em; 
     -webkit-box-pack: center; 
         -ms-flex-pack: center; 
             justify-content: center;
 }
 #btn-contact {
-    padding: .5em .5em;
+    padding: 1em;
     width: 150px;
     color: #393939;
     background: #ff8882;
     cursor: pointer;
-    font-size: 1em; 
+    font-size: 1.1em; 
     border: 1.2px solid #ff8882;
-    font-weight: bolder;
+    /* font-weight: bolder; */
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center;
@@ -266,16 +267,9 @@ ul li a:hover {
 }
 
 .resume:hover {
-    -webkit-box-shadow: 10px 10px 15px 0px rgb(255, 136, 130,.3);
-            box-shadow: 10px 10px 15px 0px rgb(255, 136, 130,.3);
+    /* box-shadow: 10px 10px 15px 0px rgb(255, 136, 130,.3); */
     text-decoration: none;
     color: #ff8882; 
-    -webkit-transform: scaleX(1.2); 
-        -ms-transform: scaleX(1.2); 
-            transform: scaleX(1.2);
-    -webkit-transition: all .5s .5s linear;
-    -o-transition: all .5s .5s linear;
-    transition: all .5s .5s linear;
 }
 
 #skills { 
@@ -363,7 +357,7 @@ ul li a:hover {
             justify-content: center;
     margin: 0 auto 2em;
     font-size: 1em;
-    color: #fff1cf;
+    color: #aea493;
     width: 85%;
 }
 .projects__item div {
@@ -402,7 +396,7 @@ a:hover, a#web:hover, a#case:hover {
     color: #ff8882;
 }
 .projects__item {
-    border: .1px solid #fff1cf;
+    border: .1px dotted #aea493;
     border-radius: 2em;
     margin-bottom: 1em;
 }
@@ -603,7 +597,7 @@ a:hover, a#web:hover, a#case:hover {
     padding: .5em;
 }
 h6 {
-    color: #ff8882;
+    color: #aea493;
     opacity: .6;
     margin: 0;
 }
@@ -685,7 +679,6 @@ h6 {
     }
     .profile-content p {
         text-align: left;
-        color: #d3c4c4;
     }
     #project {
         padding: 3em;
